--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 
     implementation 'androidx.fragment:fragment-ktx:1.5.6'
     implementation 'androidx.activity:activity-ktx:1.7.0'
+    implementation "androidx.activity:activity:1.6.0-alpha05"
 
     implementation "androidx.security:security-crypto:1.1.0-alpha03"
     implementation 'androidx.multidex:multidex:2.0.1'
