--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,6 +96,18 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.MusicPlayer.Home" />
 
+        <activity
+            android:name=".activity.SearchScanFilesActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MusicPlayer.Home" />
+
+        <activity
+            android:name=".activity.SearchTrashedActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MusicPlayer.Home" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
