--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
 }
 
 dependencies {
+    implementation("androidx.core:core:1.9.0")
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
@@ -74,4 +75,10 @@ dependencies {
     implementation 'com.github.iammert:MusicPlayerView:e3b937c729'
 
     implementation 'com.gauravk.audiovisualizer:audiovisualizer:0.9.2'
+
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+//    implementation 'com.github.annhienktuit:CircularImageviewRotation:1.0.8'
 }
